--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   <body>
     <div class="" id="new-game-div">
       <h2>New Game</h2>
-      <label for="ng_rows">Rows:</label>
-      <input type="number" size="3" id="ng_rows" />
-      <label for="ng_cols">Columns:</label>
-      <input type="number" size="3" id="ng_cols" />
-      <label for="ng_mines">Mines:</label>
-      <input type="number" size="3" id="ng_mines" />
+      <label for="rows">Rows:</label>
+      <input type="number" size="3" id="rows" />
+      <label for="cols">Columns:</label>
+      <input type="number" size="3" id="cols" />
+      <label for="mines">Mines:</label>
+      <input type="number" size="3" id="mines" />
+      <div class="button-group">
+        <div class="button" id="Start_button">Start New Game</div>
+        <div class="button" id="cancel_button">Cancel</div>
+      </div>
+      <button class="close-button" type="button"></button>
     </div>
   </body>
 </html>
